restrict-wildcard-resources/.chainsaw-test/chainsaw-step-01-assert-2.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-wildcard-resources-role 
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
